fix(usuario): resolve dynamic CORS origins per request